--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta description="olololo">
-    <title>month2</title>
+    <meta description="web site whee you can order a beautiful room">
+    <title>rooms <3 </title>
 <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>-->
 
     <link rel="stylesheet" href="src/libs/swiper/swiper-bundle.min.css"/>
