inside links added

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                     <img class="header__img logo" src="src/images/header/Frame.svg" alt="logo">
                 </div>
                 <ul class="header__navbar-below-menu-1">
-                    <li class="header__navbar-below-item"><a href="#">OVERVIEW</a></li>
-                    <li class="header__navbar-below-item"><a href="#">FEATURES</a></li>
-                    <li class="header__navbar-below-item"><a href="#">TECHNOLOGY</a></li>
+                    <li class="header__navbar-below-item"><a href="#rooms">OVERVIEW</a></li>
+                    <li class="header__navbar-below-item"><a href="#brands">FEATURES</a></li>
+                    <li class="header__navbar-below-item"><a href="#work">TECHNOLOGY</a></li>
                 </ul>
                 <ul class="header__navbar-below-menu-2">
                     <li class="header__navbar-below-item">
